[package]
name = "bevy-donors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-stripe = { version = "0.34", features = ["async", "runtime-tokio-hyper"] }
tokio = { version = "1.0", features = ["full"] }
futures-lite = "2.2.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
toml = "0.8"
serde = "1.0"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"